# sticky-utilities

./: .codecov.yml  .travis.yml  CMakeLists.txt  Package.swift  README.md  StickyUtilities.podspec
Sources/: CMakeLists.txt
Sources/StickyUtilities/: MemoryAlignment.swift
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/StickyUtilitiesTests/: MemoryAlignmentTests.swift  MemoryAlignmentTests.swift.gyb
